Redact email password in config.json
Redacted email password for security reasons.

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "email_sender": "priyankaabc1004@gmail.com",
-    "email_password": "qbu saxh ngzc freh",
+    "email_password": "*** **** **** ****",
     "email_receiver": "priyanka.bh104@gmail.com",
     "price_drop_threshold": 1,
     "run_interval_hours": 12
